<resources>
    <string name="app_name">SqueezeAdmin</string>

    <string name="mainAddLabel">Add</string>
    <string name="mainViewLabel">View</string>
    <string name="mainReportsLabel">Reports</string>
    <string name="mainTrainLabel">Train</string>
    <string name="mainSettingsLabel">Settings</string>

    <string name="addEmployeeBtn">SEND DATA</string>
    <string name="updateEmployeeBtn">UPDATE</string>

    <string name="firstNameHint">First name</string>
    <string name="lastNameHint">Last name</string>
    <string name="emailHint">Email</string>
    <string name="authorizationLabel">Authorized</string>
    <string name="fromLabel">From</string>
    <string name="dateFormatHint">dd/mm/yyyy</string>
    <string name="toLabel">To</string>
    <string name="fullNameLabel">Full name separated by a \'-\'</string>
    <string name="trainNetwork">TRAIN NETWORK</string>

    <string name="shared_prefs_file_key">ddgfde6-f5e5f65d-efefdss-efesa</string>
    <string name="shared_prefs_jwt_key">JWT_KEY_678984654987</string>
    <string name="deviceFakeMac">11:22:33:44:55:66</string>
    <string name="deviceFakeName">android</string>

    <string name="successTitle">Success</string>
    <string name="successAddingEmployee"> Success while adding the employee to the database.</string>
    <string name="successSendingImages">Success while saving images</string>

    <string name="viewEmployeesTitle">DATABASE</string>
    <string name="viewLogsTitle">LOGS</string>
    <string name="trainNetTitle">Train</string>
    <string name="viewEmployeesActivity">Manage</string>
    <string name="viewLogsActivity">Logs</string>
    <string name="addEmployeeActivity">New employee</string>

    <string name="updateBtmSheetTitle">UPDATE</string>

    <string name="prefs_network_settings">Network settings</string>
    <string name="delete_pics_prefs">Remove pictures</string>
    <string name="delete_pics_summary">Delete all pictures from database</string>
    <string name="delete_log_prefs">Empty log file</string>
    <string name="delete_log_summary">Deleting log content. This is irreversible.</string>
    <string name="view_jwt">Show JWT</string>
    <string name="jwt">Tap to update JWT</string>
    <string name="view_ip">Server IP</string>
    <string name="server_ip">1.1.1.1</string>

    <string name="setting_title">Settings</string>
</resources>
