<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/updateEmployeeBottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/quitBottomSheet"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_round_clear_24px" />

        <TextView
            android:id="@+id/titleUpdateBottomSheet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/updateBtmSheetTitle"
            android:textColor="@color/floralWhite"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quitBottomSheet" />

        <ImageView
            android:id="@+id/authorizeBtnBtm"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_lock_open_white_24px" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstNameInputLayoutBtm"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/floralWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/quitBottomSheet">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/firstNameBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/firstNameHint"
                android:shadowColor="@color/labelTextColor"
                android:textColor="@color/labelTextColor"
                android:textColorHighlight="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/lastNameEdiInputLayoutBtm"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:textColorHint="@color/floralWhite"
            app:layout_constraintStart_toEndOf="@+id/firstNameInputLayoutBtm"
            app:layout_constraintTop_toTopOf="@+id/firstNameInputLayoutBtm">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/lastNameBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/lastNameHint"
                android:shadowColor="@color/labelTextColor"
                android:textColor="@color/labelTextColor"
                android:textColorHighlight="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/emailInputLayoutBtm"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/floralWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstNameInputLayoutBtm">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/emailHint"
                android:shadowColor="@color/labelTextColor"
                android:textColor="@color/labelTextColor"
                android:textColorHighlight="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateBegInputLayoutBtm"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/floralWhite"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayoutBtm">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateBegBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/dateFormatHint"
                android:shadowColor="@color/labelTextColor"
                android:textColor="@color/labelTextColor"
                android:textColorHighlight="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/toLabelBtm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:fontFamily="sans-serif-thin"
            android:text="@string/toLabel"
            android:textColor="@color/floralWhite"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/dateEndInputLayoutBtm"
            app:layout_constraintStart_toEndOf="@+id/dateBegInputLayoutBtm"
            app:layout_constraintTop_toTopOf="@+id/dateBegInputLayoutBtm" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/dateEndInputLayoutBtm"
            style="@style/TextAppearence.App.TextInputLayout"
            android:layout_width="120dp"
            android:layout_height="0dp"
            android:layout_marginEnd="16dp"
            android:textColorHint="@color/floralWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/dateBegInputLayoutBtm">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/dateEndBottomSheet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/dateFormatHint"
                android:shadowColor="@color/labelTextColor"
                android:textColor="@color/labelTextColor"
                android:textColorHighlight="@color/labelTextColor"
                android:textColorHint="@color/labelTextColor" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/updateEmployeeBtn"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="16dp"
            android:background="@color/buttonBcgColor"
            android:fontFamily="sans-serif-thin"
            android:text="@string/updateBtmSheetTitle"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dateBegInputLayoutBtm" />


    </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>